Format basiert auf [Keep a Changelog](https://keepachangelog.com/de/1.0.0/) und [SemVer](https://semver.org/lang/de/).

---

## [1.9.0] – 2025-09-24
### Added
- Autocomplete-Eingabe für Findings mit Enter-Workflow
- Automatische Actions und Bestellliste
- Neue Textfelder: Routine & Nonroutine
- Copy-Buttons für alle Textfelder
- Live-Preview, History, LocalStorage, Accordion und Export-Funktion

## [1.8.4] – 2025-09-23
### Changed
- Modulbreite auf Minimalwerte reduziert

## [1.8.3] – 2025-09-23
### Changed
- Manifestversion auf 1.0.1 angehoben

## [1.8.2] – 2025-09-23
### Changed
- Standardgröße angepasst, um Scrollleisten zu vermeiden

## [1.8.1] – 2025-09-22
### Changed
- Update-Einstellungen überarbeitet und Ordnernamen gespeichert

## [1.8.0] – 2025-09-22
### Added
- Versionsbasiertes Update-Tracking umgesetzt

## [1.7.0] – 2025-09-10
### Added
- Findings nach Teilenummer filterbar gemacht

## [1.6.1] – 2025-09-10
### Changed
- Ausgewählte Dateinamen im Menü angezeigt

## [1.6.0] – 2025-09-10
### Added
- Auswahl an Findings und Dictionary dauerhaft gespeichert

## [1.5.0] – 2025-09-10
### Added
- Findings.xlsx automatisch geladen

## [1.4.3] – 2025-09-10
### Changed
- Standardwerte für Standard Findings verbessert

## [1.4.2] – 2025-09-10
### Changed
- Gemeinsamen Kontextmenüstil genutzt und Root-Excel vorausgewählt

## [1.4.1] – 2025-09-10
### Fixed
- Automatischen Dateiladevorgang und Teileüberschrift korrigiert

## [1.4.0] – 2025-09-10
### Added
- Dictionary zur Auflösung der Teilenummer verwendet

## [1.3.0] – 2025-09-10
### Added
- Standard-Findings-Tabelle automatisch geladen

## [1.2.1] – 2025-09-10
### Changed
- Aktuelle Teilenummer in der Überschrift dargestellt

## [1.2.0] – 2025-09-10
### Added
- Kontextmenü um Dateiauswahl und Mehrfachselektion erweitert

## [1.1.0] – 2025-09-10
### Added
- XLSM-Unterstützung und getrennte Findings-/Aktionsausgabe ergänzt

## [1.0.0] – 2025-09-10
### Added